fix: correct Maven Central authentication in GitHub Actions

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -55,49 +55,42 @@ jobs:
           SETTINGS_FILE=~/.m2/settings.xml
           echo "Generating Maven settings at $SETTINGS_FILE"
           if [ -n "${{ secrets.OSSRH_BEARER_TOKEN }}" ]; then
-            cat > "$SETTINGS_FILE" << 'SETTINGS_EOF'
-<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
-                              https://maven.apache.org/xsd/settings-1.0.0.xsd">
-  <servers>
-    <server>
-      <id>ossrh</id>
-      <configuration>
-        <httpHeaders>
-          <property>
-            <name>Authorization</name>
-            <value>Bearer BEARER_TOKEN_PLACEHOLDER</value>
-          </property>
-        </httpHeaders>
-      </configuration>
-    </server>
-  </servers>
-</settings>
-SETTINGS_EOF
-            sed -i "s|BEARER_TOKEN_PLACEHOLDER|${{ secrets.OSSRH_BEARER_TOKEN }}|g" "$SETTINGS_FILE"
+            echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"' > "$SETTINGS_FILE"
+            echo '          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"' >> "$SETTINGS_FILE"
+            echo '          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0' >> "$SETTINGS_FILE"
+            echo '                              https://maven.apache.org/xsd/settings-1.0.0.xsd">' >> "$SETTINGS_FILE"
+            echo '  <servers>' >> "$SETTINGS_FILE"
+            echo '    <server>' >> "$SETTINGS_FILE"
+            echo '      <id>ossrh</id>' >> "$SETTINGS_FILE"
+            echo '      <configuration>' >> "$SETTINGS_FILE"
+            echo '        <httpHeaders>' >> "$SETTINGS_FILE"
+            echo '          <property>' >> "$SETTINGS_FILE"
+            echo '            <name>Authorization</name>' >> "$SETTINGS_FILE"
+            echo "            <value>Bearer ${{ secrets.OSSRH_BEARER_TOKEN }}</value>" >> "$SETTINGS_FILE"
+            echo '          </property>' >> "$SETTINGS_FILE"
+            echo '        </httpHeaders>' >> "$SETTINGS_FILE"
+            echo '      </configuration>' >> "$SETTINGS_FILE"
+            echo '    </server>' >> "$SETTINGS_FILE"
+            echo '  </servers>' >> "$SETTINGS_FILE"
+            echo '</settings>' >> "$SETTINGS_FILE"
             echo "Using OSSRH Bearer token for authenticated deploys."
           else
             if [ -z "${{ secrets.OSSRH_USERNAME }}" ] || [ -z "${{ secrets.OSSRH_PASSWORD }}" ]; then
               echo "ERROR: Neither OSSRH_BEARER_TOKEN nor username/password is available."
               exit 1
             fi
-            cat > "$SETTINGS_FILE" << 'SETTINGS_EOF'
-<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
-                              https://maven.apache.org/xsd/settings-1.0.0.xsd">
-  <servers>
-    <server>
-      <id>ossrh</id>
-      <username>USERNAME_PLACEHOLDER</username>
-      <password>PASSWORD_PLACEHOLDER</password>
-    </server>
-  </servers>
-</settings>
-SETTINGS_EOF
-            sed -i "s|USERNAME_PLACEHOLDER|${{ secrets.OSSRH_USERNAME }}|g" "$SETTINGS_FILE"
-            sed -i "s|PASSWORD_PLACEHOLDER|${{ secrets.OSSRH_PASSWORD }}|g" "$SETTINGS_FILE"
+            echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"' > "$SETTINGS_FILE"
+            echo '          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"' >> "$SETTINGS_FILE"
+            echo '          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0' >> "$SETTINGS_FILE"
+            echo '                              https://maven.apache.org/xsd/settings-1.0.0.xsd">' >> "$SETTINGS_FILE"
+            echo '  <servers>' >> "$SETTINGS_FILE"
+            echo '    <server>' >> "$SETTINGS_FILE"
+            echo '      <id>ossrh</id>' >> "$SETTINGS_FILE"
+            echo "      <username>${{ secrets.OSSRH_USERNAME }}</username>" >> "$SETTINGS_FILE"
+            echo "      <password>${{ secrets.OSSRH_PASSWORD }}</password>" >> "$SETTINGS_FILE"
+            echo '    </server>' >> "$SETTINGS_FILE"
+            echo '  </servers>' >> "$SETTINGS_FILE"
+            echo '</settings>' >> "$SETTINGS_FILE"
             echo "Using OSSRH username/password credentials."
           fi
 
