Updating publishing to central

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -48,74 +48,46 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      - name: Write Maven settings.xml (OSSRH Bearer token preferred)
+      - name: Write Maven settings.xml for Central Portal
         env:
-          OSSRH_BEARER_TOKEN: ${{ secrets.OSSRH_BEARER_TOKEN }}
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          CENTRAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+          CENTRAL_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
         run: |
           set -e
           mkdir -p ~/.m2
           SETTINGS_FILE=~/.m2/settings.xml
           echo "Generating Maven settings at $SETTINGS_FILE"
-          if [ -n "$OSSRH_BEARER_TOKEN" ]; then
-            echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"' > "$SETTINGS_FILE"
-            echo '          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"' >> "$SETTINGS_FILE"
-            echo '          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0' >> "$SETTINGS_FILE"
-            echo '                              https://maven.apache.org/xsd/settings-1.0.0.xsd">' >> "$SETTINGS_FILE"
-            echo '  <servers>' >> "$SETTINGS_FILE"
-            echo '    <server>' >> "$SETTINGS_FILE"
-            echo '      <id>ossrh</id>' >> "$SETTINGS_FILE"
-            echo '      <configuration>' >> "$SETTINGS_FILE"
-            echo '        <httpHeaders>' >> "$SETTINGS_FILE"
-            echo '          <property>' >> "$SETTINGS_FILE"
-            echo '            <name>Authorization</name>' >> "$SETTINGS_FILE"
-            echo "            <value>Bearer ${OSSRH_BEARER_TOKEN}</value>" >> "$SETTINGS_FILE"
-            echo '          </property>' >> "$SETTINGS_FILE"
-            echo '        </httpHeaders>' >> "$SETTINGS_FILE"
-            echo '      </configuration>' >> "$SETTINGS_FILE"
-            echo '    </server>' >> "$SETTINGS_FILE"
-            echo '  </servers>' >> "$SETTINGS_FILE"
-            echo '</settings>' >> "$SETTINGS_FILE"
-            echo "Using OSSRH Bearer token for authenticated deploys."
-          else
-            if [ -z "$OSSRH_USERNAME" ] || [ -z "$OSSRH_PASSWORD" ]; then
-              echo "ERROR: Neither OSSRH_BEARER_TOKEN nor username/password is available."
-              exit 1
-            fi
-            echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"' > "$SETTINGS_FILE"
-            echo '          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"' >> "$SETTINGS_FILE"
-            echo '          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0' >> "$SETTINGS_FILE"
-            echo '                              https://maven.apache.org/xsd/settings-1.0.0.xsd">' >> "$SETTINGS_FILE"
-            echo '  <servers>' >> "$SETTINGS_FILE"
-            echo '    <server>' >> "$SETTINGS_FILE"
-            echo '      <id>ossrh</id>' >> "$SETTINGS_FILE"
-            echo "      <username>${OSSRH_USERNAME}</username>" >> "$SETTINGS_FILE"
-            echo "      <password>${OSSRH_PASSWORD}</password>" >> "$SETTINGS_FILE"
-            echo '    </server>' >> "$SETTINGS_FILE"
-            echo '  </servers>' >> "$SETTINGS_FILE"
-            echo '</settings>' >> "$SETTINGS_FILE"
-            echo "Using OSSRH username/password credentials."
+          if [ -z "$CENTRAL_USERNAME" ] || [ -z "$CENTRAL_PASSWORD" ]; then
+            echo "ERROR: CENTRAL_USERNAME and CENTRAL_PASSWORD are required."
+            exit 1
           fi
+          echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"' > "$SETTINGS_FILE"
+          echo '          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"' >> "$SETTINGS_FILE"
+          echo '          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0' >> "$SETTINGS_FILE"
+          echo '                              https://maven.apache.org/xsd/settings-1.0.0.xsd">' >> "$SETTINGS_FILE"
+          echo '  <servers>' >> "$SETTINGS_FILE"
+          echo '    <server>' >> "$SETTINGS_FILE"
+          echo '      <id>central</id>' >> "$SETTINGS_FILE"
+          echo "      <username>${CENTRAL_USERNAME}</username>" >> "$SETTINGS_FILE"
+          echo "      <password>${CENTRAL_PASSWORD}</password>" >> "$SETTINGS_FILE"
+          echo '    </server>' >> "$SETTINGS_FILE"
+          echo '  </servers>' >> "$SETTINGS_FILE"
+          echo '</settings>' >> "$SETTINGS_FILE"
+          echo "Using Maven Central user token credentials."
 
       # diagnostics for secrets
-      - name: Check OSSRH auth inputs availability
+      - name: Check Maven Central auth inputs availability
         env:
-          OSSRH_BEARER_TOKEN: ${{ secrets.OSSRH_BEARER_TOKEN }}
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          CENTRAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+          CENTRAL_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
         run: |
-          if [ -n "$OSSRH_BEARER_TOKEN" ]; then
-            echo "OSSRH_BEARER_TOKEN is present (Bearer auth will be used)."
+          if [ -z "$CENTRAL_USERNAME" ] || [ -z "$CENTRAL_PASSWORD" ]; then
+            echo "ERROR: Missing Maven Central credentials. Provide CENTRAL_USERNAME and CENTRAL_PASSWORD."
+            exit 1
           else
-            if [ -z "$OSSRH_USERNAME" ] || [ -z "$OSSRH_PASSWORD" ]; then
-              echo "ERROR: Missing OSSRH credentials. Provide OSSRH_BEARER_TOKEN or OSSRH_USERNAME/OSSRH_PASSWORD."
-              exit 1
-            else
-              echo "OSSRH username/password are present."
-              echo "Username length: ${#OSSRH_USERNAME}"
-              echo "Password length: ${#OSSRH_PASSWORD}"
-            fi
+            echo "Maven Central username/password are present."
+            echo "Username length: ${#CENTRAL_USERNAME}"
+            echo "Password length: ${#CENTRAL_PASSWORD}"
           fi
 
       - name: Verify settings.xml was created
